--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: appmetrica
 description: A Flutter plugin for AppMetrica by Yandex.
 version: 0.1.1
-homepage: https://appmetrica.yandex.com
+homepage: https://github.com/modeckrus/appmetrica
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
