--- a/example/ios/Flutter/Generated.xcconfig
+++ b/example/ios/Flutter/Generated.xcconfig
@@ -1,13 +1,14 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/home/modeck/flutter
-FLUTTER_APPLICATION_PATH=/home/modeck/dev/flutter/appmetrica/example
+FLUTTER_ROOT=/Users/modeck/flutter
+FLUTTER_APPLICATION_PATH=/Users/modeck/dev/flutter/appmetrica/example
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_TARGET=/Users/modeck/dev/flutter/appmetrica/example/lib/main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
 EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386
+DART_DEFINES=RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==
 DART_OBFUSCATION=false
-TRACK_WIDGET_CREATION=false
+TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=.dart_tool/package_config.json
+PACKAGE_CONFIG=/Users/modeck/dev/flutter/appmetrica/example/.dart_tool/package_config.json
